# Collage

./: README.md  README_OBS_VIRTUAL_CAM.txt  body_calculator.html  common.js  draft.html  import.css  import.html  index.html  mtg.css  mtg.html  mtg_wants_as_pics.html  other_concepts.html  picker.html
glsl/: e.html
mtg/: README.md  article.json  cards.js  data_download.py  main.js  more_data.json  prepare_data.py  tags.json  wants.json
mtg/articles/: article.json  basics.json  commander_anje_madness.json  commander_artifacts.json  commander_ccc.json  commander_combo.json  commander_counters.json  commander_curses.json  commander_cycling.json  commander_equipment.json  commander_estrid.json  commander_firesong.json  commander_flashback.json  commander_flying.json  commander_fog.json  commander_grenzo.json  commander_henzie.json  commander_kadena.json  commander_kathril.json  commander_kurkesh.json  commander_merieke.json  commander_mill_grixis.json  commander_minn.json  commander_new_izzet.json  commander_nin.json  commander_populate.json  commander_quintorius.json  commander_removal.json  commander_roon.json  commander_season_of_growth.json  commander_taigam.json  commander_takeover.json  commander_teysa.json  commander_twincasters_tokens.json  commander_verazol_kicker.json  commander_wort.json  cube.json  wants.json
mtg/mtg_api/: CMakeLists.txt  README.md  basic_interface.h  database.cpp  database.hpp  json.cpp  json.hpp  mtg_api.cpp  mtg_api.h  mtg_api_test.cpp  mtg_api_util.cpp  name_to_tags.json  web.hpp
mtg/mtg_api/nginx/: CMakeLists.txt  config  mtg_api_download.sh  mtg_api_module.c  nginx.conf  nginx_runtime.sh  setup_nginx.sh
mtg/python_tooling/: cardmarket_api.py  concurrent_do.py  concurrent_do_test.py  mtg_json.py  prepare_data.py  price_record.py  prices_download.py  query.py  serialize.py  serialize_test.py  summary.py
